# PyOxfordDictionary

./: README.md  requirements.txt  setup.cfg
src/: setup.py
src/PyDictionary/: color.py  main.py
src/PyOxfordDictionary/: entries.py  lemmas.py  main.py  search.py  sentences.py  user.py  utilities.py
src/PyOxfordDictionary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: test_entries.py  test_oxford.py
